fix properly fix image gallery spacing

--- a/assets/css/src/document.less
+++ b/assets/css/src/document.less
@@ -211,7 +211,7 @@ main {
 	/* LISTS ---------------------------------- */
 	// as to not use in header or footer.
 	ol,
-	ul:not(.wp-block-gallery) {
+	ul {
 		margin: 0 0 @space @space;
 	}
 
