--- a/assets/css/src/editor.less
+++ b/assets/css/src/editor.less
@@ -56,6 +56,10 @@ blockquote {
 	.post_meta;
 }
 
+ul.wp-block-gallery {
+	margin-left: 0;
+}
+
 /* Custom Classes ---------------------------------- */
 
 .has-medium-font-size {
